changing the file locations

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="main_css.css">
+    <link rel="stylesheet" href="css/main_css.css">
 
 
 </head>
@@ -80,7 +80,7 @@
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous">
     </script>
-    <script src='mainJS.js'>
+    <script src='js/mainJS.js'>
 
     </script>
 </body>
